Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19418

Can't remove bookmark after file rename

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.6.0-beta1
    • Qt Creator 4.4.1
    • Editors
    • None
    • Windows 7
      QT Creator 4.4.1
      Based on Qt 5.9.2 (MSVC 2015, 32 bit)

      I created a bookmark in a file with filename somefile.cpp
      Afterwards I renamed the file to SomeFile.cpp (Just changing the case to CamelCase).
      Now I am unable to remove the bookmark using the Shortcut keys (CTRL + M).

      The editor still shows the bookmark icon if I open the file, and it can still jump to it. 
      When I press CTRL+M on the same line, a new bookmark is made and I can see the 2 icons on top of each other. If I press CTRL+M again the new bookmark gets removed. If there are 2 on the same line (old and new one) I can jump between them as if they are 2 separate bookmarks (also seen as 2 separate bookmarks in the navigation widget).

      I am on Windows (Case Insensitive file system) which might be the reason for this. The file system treats it as the same file, but Qt Creator treats it as 2 different files. 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            thebadger101 Carel Combrink
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes