src/plugins/bookmarks/bookmarkmanager.h
@@ -26,6 +26,7 @@
 #pragma once
 
 #include <utils/itemviews.h>
+#include <utils/fileutils.h>
 #include <coreplugin/inavigationwidgetfactory.h>
 
 #include <QAbstractItemModel>
@@ -76,7 +77,7 @@ public:
     // this QItemSelectionModel is shared by all views
     QItemSelectionModel *selectionModel() const;
 
-    bool hasBookmarkInPosition(const QString &fileName, int lineNumber);
+    bool hasBookmarkInPosition(const Utils::FileName &fileName, int lineNumber);
 
     enum Roles {
         Filename = Qt::UserRole,
@@ -86,7 +87,7 @@ public:
         Note = Qt::UserRole + 4
     };
 
-    void toggleBookmark(const QString &fileName, int lineNumber);
+    void toggleBookmark(const Utils::FileName &fileName, int lineNumber);
     void nextInDocument();
     void prevInDocument();
     void next();
@@ -94,7 +95,7 @@ public:
     void moveUp();
     void moveDown();
     void edit();
-    void editByFileAndLine(const QString &fileName, int lineNumber);
+    void editByFileAndLine(const Utils::FileName &fileName, int lineNumber);
     bool gotoBookmark(Bookmark *bookmark);
 
 signals:
@@ -107,18 +108,13 @@ private:
 
     void documentPrevNext(bool next);
 
-    Bookmark *findBookmark(const QString &filePath, int lineNumber);
+    Bookmark *findBookmark(const Utils::FileName &filePath, int lineNumber);
     void addBookmark(Bookmark *bookmark, bool userset = true);
     void addBookmark(const QString &s);
-    void addBookmarkToMap(Bookmark *bookmark);
-    bool removeBookmarkFromMap(Bookmark *bookmark, const QString &fileName = QString());
     static QString bookmarkToString(const Bookmark *b);
     void saveBookmarks();
 
-    typedef QMultiMap<QString, Bookmark *> FileNameBookmarksMap;
-    typedef QMap<QString, FileNameBookmarksMap *> DirectoryFileBookmarksMap;
-
-    DirectoryFileBookmarksMap m_bookmarksMap;
+    QMap<Utils::FileName, QVector<Bookmark *>> m_bookmarksMap;
 
     QList<Bookmark *> m_bookmarksList;
     QItemSelectionModel *m_selectionModel;
